--- a/hspplugin/hspmucom.vcxproj
+++ b/hspplugin/hspmucom.vcxproj
@@ -52,7 +52,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;HSPMUCOM_EXPORTS;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;HSPMUCOM_EXPORTS;MUCOM88WIN;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -68,7 +68,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;HSPMUCOM_EXPORTS;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;HSPMUCOM_EXPORTS;MUCOM88WIN;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -81,6 +81,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\src\adpcm.h" />
+    <ClInclude Include="..\src\callback.h" />
     <ClInclude Include="..\src\cmucom.h" />
     <ClInclude Include="..\src\fmgen\diag.h" />
     <ClInclude Include="..\src\fmgen\file.h" />
@@ -93,23 +94,27 @@
     <ClInclude Include="..\src\fmgen\opna.h" />
     <ClInclude Include="..\src\fmgen\psg.h" />
     <ClInclude Include="..\src\fmgen\types.h" />
-    <ClInclude Include="..\src\headers.h" />
     <ClInclude Include="..\src\md5.h" />
     <ClInclude Include="..\src\membuf.h" />
-    <ClInclude Include="..\src\mucom88if.h" />
+    <ClInclude Include="..\src\mucom88config.h" />
     <ClInclude Include="..\src\mucomerror.h" />
     <ClInclude Include="..\src\mucomvm.h" />
-    <ClInclude Include="..\src\plugin.h" />
-    <ClInclude Include="..\src\realchip.h" />
-    <ClInclude Include="..\src\scci.h" />
-    <ClInclude Include="..\src\SCCIDefines.h" />
+    <ClInclude Include="..\src\osdep.h" />
+    <ClInclude Include="..\src\plugin\mucom88if.h" />
+    <ClInclude Include="..\src\plugin\plugin.h" />
     <ClInclude Include="..\src\soundbuf.h" />
-    <ClInclude Include="..\src\soundds.h" />
+    <ClInclude Include="..\src\wavout.h" />
+    <ClInclude Include="..\src\win32\osdep_win.h" />
+    <ClInclude Include="..\src\win32\realchip.h" />
+    <ClInclude Include="..\src\win32\scci.h" />
+    <ClInclude Include="..\src\win32\SCCIDefines.h" />
+    <ClInclude Include="..\src\win32\soundds.h" />
     <ClInclude Include="..\src\Z80\Z80.h" />
     <ClInclude Include="hspdll.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\adpcm.cpp" />
+    <ClCompile Include="..\src\callback.cpp" />
     <ClCompile Include="..\src\cmucom.cpp" />
     <ClCompile Include="..\src\fmgen\file.cpp" />
     <ClCompile Include="..\src\fmgen\fmgen.cpp" />
@@ -121,10 +126,13 @@
     <ClCompile Include="..\src\membuf.cpp" />
     <ClCompile Include="..\src\mucomerror.cpp" />
     <ClCompile Include="..\src\mucomvm.cpp" />
-    <ClCompile Include="..\src\plugin.cpp" />
-    <ClCompile Include="..\src\realchip.cpp" />
+    <ClCompile Include="..\src\osdep.cpp" />
+    <ClCompile Include="..\src\plugin\plugin.cpp" />
     <ClCompile Include="..\src\soundbuf.cpp" />
-    <ClCompile Include="..\src\soundds.cpp" />
+    <ClCompile Include="..\src\wavout.cpp" />
+    <ClCompile Include="..\src\win32\osdep_win.cpp" />
+    <ClCompile Include="..\src\win32\realchip.cpp" />
+    <ClCompile Include="..\src\win32\soundds.cpp" />
     <ClCompile Include="..\src\Z80\Z80.cpp" />
     <ClCompile Include="hspmucom.cpp" />
   </ItemGroup>
