--- a/src/mucom88.vcxproj.filters
+++ b/src/mucom88.vcxproj.filters
@@ -163,6 +163,9 @@
     <ClInclude Include="plugin\plugin.h">
       <Filter>plugin</Filter>
     </ClInclude>
+    <ClInclude Include="voiceformat.h">
+      <Filter>mucom88</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Z80">
