--- a/src/pcmtool.vcxproj.filters
+++ b/src/pcmtool.vcxproj.filters
@@ -58,9 +58,6 @@
     <ClCompile Include="osdep.cpp">
       <Filter>mucom88</Filter>
     </ClCompile>
-    <ClCompile Include="wavout.cpp">
-      <Filter>mucom88</Filter>
-    </ClCompile>
     <ClCompile Include="plugin\plugin.cpp">
       <Filter>plugin</Filter>
     </ClCompile>
@@ -74,6 +71,9 @@
       <Filter>utils</Filter>
     </ClCompile>
     <ClCompile Include="utils\wavwrite.cpp">
+      <Filter>utils</Filter>
+    </ClCompile>
+    <ClCompile Include="utils\codeconv\codeconv_dummy.cpp">
       <Filter>utils</Filter>
     </ClCompile>
   </ItemGroup>
@@ -168,9 +168,6 @@
     <ClInclude Include="callback.h">
       <Filter>mucom88</Filter>
     </ClInclude>
-    <ClInclude Include="wavout.h">
-      <Filter>mucom88</Filter>
-    </ClInclude>
     <ClInclude Include="plugin\plugin.h">
       <Filter>plugin</Filter>
     </ClInclude>
@@ -189,6 +186,9 @@
       <Filter>utils</Filter>
     </ClInclude>
     <ClInclude Include="utils\wavwrite.h">
+      <Filter>utils</Filter>
+    </ClInclude>
+    <ClInclude Include="utils\codeconv\codeconv_dummy.h">
       <Filter>utils</Filter>
     </ClInclude>
   </ItemGroup>
