--- a/hspplugin/hspmucom.vcxproj
+++ b/hspplugin/hspmucom.vcxproj
@@ -42,9 +42,11 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>$(VC_IncludePath);$(WindowsSdk_71A_IncludePath);..\src\utils\codeconv;</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>$(VC_IncludePath);$(WindowsSdk_71A_IncludePath);..\src\utils\codeconv;</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -105,12 +107,12 @@
     <ClInclude Include="..\src\plugin\mucom88if.h" />
     <ClInclude Include="..\src\plugin\plugin.h" />
     <ClInclude Include="..\src\soundbuf.h" />
+    <ClInclude Include="..\src\utils\codeconv\codeconv_dummy.h" />
     <ClInclude Include="..\src\utils\logwrite.h" />
     <ClInclude Include="..\src\utils\pcmentry.h" />
     <ClInclude Include="..\src\utils\s98write.h" />
     <ClInclude Include="..\src\utils\vgmwrite.h" />
     <ClInclude Include="..\src\utils\wavwrite.h" />
-    <ClInclude Include="..\src\wavout.h" />
     <ClInclude Include="..\src\win32\osdep_win.h" />
     <ClInclude Include="..\src\win32\realchip.h" />
     <ClInclude Include="..\src\win32\scci.h" />
@@ -136,12 +138,12 @@
     <ClCompile Include="..\src\osdep.cpp" />
     <ClCompile Include="..\src\plugin\plugin.cpp" />
     <ClCompile Include="..\src\soundbuf.cpp" />
+    <ClCompile Include="..\src\utils\codeconv\codeconv_dummy.cpp" />
     <ClCompile Include="..\src\utils\pcmentry.cpp" />
     <ClCompile Include="..\src\utils\pcmtool.cpp" />
     <ClCompile Include="..\src\utils\s98write.cpp" />
     <ClCompile Include="..\src\utils\vgmwrite.cpp" />
     <ClCompile Include="..\src\utils\wavwrite.cpp" />
-    <ClCompile Include="..\src\wavout.cpp" />
     <ClCompile Include="..\src\win32\osdep_win.cpp" />
     <ClCompile Include="..\src\win32\realchip.cpp" />
     <ClCompile Include="..\src\win32\soundds.cpp" />
