--- a/hspplugin/hspmucom.vcxproj.filters
+++ b/hspplugin/hspmucom.vcxproj.filters
@@ -59,9 +59,6 @@
     <ClCompile Include="..\src\soundbuf.cpp">
       <Filter>mucom88</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\wavout.cpp">
-      <Filter>mucom88</Filter>
-    </ClCompile>
     <ClCompile Include="..\src\plugin\plugin.cpp">
       <Filter>plugin</Filter>
     </ClCompile>
@@ -78,6 +75,9 @@
       <Filter>utils</Filter>
     </ClCompile>
     <ClCompile Include="..\src\utils\wavwrite.cpp">
+      <Filter>utils</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\utils\codeconv\codeconv_dummy.cpp">
       <Filter>utils</Filter>
     </ClCompile>
   </ItemGroup>
@@ -164,9 +164,6 @@
     <ClInclude Include="..\src\soundbuf.h">
       <Filter>mucom88</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\wavout.h">
-      <Filter>mucom88</Filter>
-    </ClInclude>
     <ClInclude Include="..\src\plugin\mucom88if.h">
       <Filter>plugin</Filter>
     </ClInclude>
@@ -186,6 +183,9 @@
       <Filter>utils</Filter>
     </ClInclude>
     <ClInclude Include="..\src\utils\wavwrite.h">
+      <Filter>utils</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\utils\codeconv\codeconv_dummy.h">
       <Filter>utils</Filter>
     </ClInclude>
   </ItemGroup>
